<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="92dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="47dp"
            android:text="@string/inbox"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.012" />

        <Button
            android:id="@+id/button"
            android:layout_width="95dp"
            android:layout_height="43dp"
            android:layout_marginTop="10dp"
            android:onClick="retrieveEmails"
            android:text="@string/refresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.923"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/results_listview"
            android:layout_width="350dp"
            android:layout_height="387dp"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            app:layout_constraintBottom_toBottomOf="@id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.352" />

        <Button
            android:id="@+id/button2"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:onClick="sendEmail"
            android:paddingBottom="10dp"
            android:text="@string/send_msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/results_listview"
            app:layout_constraintVertical_bias="0.177" />

        <Button
            android:id="@+id/log_out_btn"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:onClick="logOut"
            android:paddingBottom="10dp"
            android:text="@string/log_out_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/results_listview"
            app:layout_constraintVertical_bias="0.177" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>